modified margin, font size and page breaks for both ProblemStatement and Development Plan

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -1,9 +1,10 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 
 \usepackage{booktabs}
 \usepackage{tabularx}
 \usepackage{graphicx}
 \usepackage[table]{xcolor}
+\usepackage[letterpaper, portrait, margin=1in]{geometry}
 
 \title{Development Plan\\\progname}
 
@@ -68,6 +69,8 @@ The task of reviewing rubrics, and each subcomponents of the project will not be
 
 \section{Workflow Plan}
 Git's branching technique will be used for version control purposes. For any technical commits, everyone is required to put in a formal merge request for GitHub leaders to review and approve or deny. All documentation work does not have to go through GitHub leaders, and can be commited to the main branch right away. Trello will be used for project management purposes (keeping track of non-technical tasks) and Github issue tracker will be used for keeping track of technical tasks.\\
+
+\pagebreak
 
 \section{Proof of Concept Demonstration Plan}
 
@@ -154,6 +157,8 @@ The following tools shall be used for development in software, embedded systems 
 \item Wood working tools (Hand Saws and Power Sanding ) if necessary.
 \end{itemize}
 \end{enumerate}
+
+\pagebreak
 
 \section{Coding Standard}
 \begin{enumerate}
