--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -1,7 +1,8 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 
 \usepackage{tabularx}
 \usepackage{booktabs}
+\usepackage[letterpaper, portrait, margin=1in]{geometry}
 
 \title{Problem Statement and Goals\\\progname}
 
@@ -43,6 +44,8 @@ Their current system works on a time-based prompt-system, asking questions at re
 
 This solution device would have to capture the subtle and slow movement of older adult patients with lumbar spinal stenosis (LSS) and prompt them with pre-determined questions when they stop or make certain type of  movements. It will then have to collect and send those data back to Dr. Macedo for her analysis.
 
+\pagebreak
+
 \subsection{Inputs and Outputs}
 
 \textbf{[Inputs]}
@@ -50,7 +53,7 @@ This solution device would have to capture the subtle and slow movement of older
     \item Sensor data will be used as a trigger to start the EMA
     \item User responses to the survey for data collection
 \end{itemize}
-\pagebreak
+
 \textbf{[Outputs]}
 \linebreak
 The output will be something that's useful for research and conclusion. This includes:
@@ -76,7 +79,9 @@ Constraints include. All the numbers included are average and are subject to cha
     \item Accurate timing: System is very sensitive to timing inaccuracies, no \linebreak expected delays between detection and reporting.
     \item Battery Life: The device should be operable for a minimum of 7 days without having to charge or replace the battery, as this is the standard length for one EMA evaluation session.
 \end{itemize}
+
 \pagebreak
+
 \section{Base Goals}
 \begin{center}
     \begin{tabular}{ | m{7em} | m{32em}| }
@@ -96,7 +101,9 @@ Constraints include. All the numbers included are average and are subject to cha
         \hline
     \end{tabular}
 \end{center}
+
 \pagebreak
+
 \section{Stretch Goals}
 \begin{center}
     \begin{tabular}{ | m{7em} | m{32em}| }
