--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -35,13 +35,13 @@
 
 \subsection{Motivation Problem}
 
-Dr. Luciana Macedo investigates treatment strategies for elders with  lumbar spinal disorders (LSS), particularly focused on Ecological Momentary Assessment (EMA). EMA aims to study the thoughts, experiences, and behaviours of patients' daily lives by repeatedly collecting data in their day-to-day environment, at or close to the time they carry out that particular behaviour.\\
+Dr. Luciana Macedo investigates treatment strategies for older adults with  lumbar spinal disorders (LSS), particularly focused on Ecological Momentary Assessment (EMA). EMA aims to study the thoughts, experiences, and behaviours of patients' daily lives by repeatedly collecting data in their day-to-day environment, at or close to the time they carry out that particular behaviour.\\
 
-Since Dr. Macedo's EMA work is focused on analyzing the daily activities and symptoms of mostly-elderly people with mobility issues, her solution needs to capture their slow and subtle movements. In order to accomplish this, she and her students have attempted to use various smart-watch-esque activity tracking devices along with various software applications to prompt their patients with questions. However, they have been frustrated with very limited success.\\
+Since Dr. Macedo's EMA work is focused on analyzing the daily activities and symptoms of mostly-older adults with mobility issues, her solution needs to capture their slow and subtle movements. In order to accomplish this, she and her students have attempted to use various smart-watch-esque activity tracking devices along with various software applications to prompt their patients with questions. However, they have been frustrated with very limited success.\\
 
-Their current system works on a time-based prompt-system, asking questions at regular intervals throughout the day. This isn't as useful, as they are rather interested in the experiences of their patients when certain events or triggers happen. In addition, all of her data collection methods are heavily segregated and inefficient. In order to report their symptoms, a patient must input their answers into a smart watch, a mobile app, a website, etc. According to Dr. Macedo, this is not quite user-friendly especially when it comes to a group of elderly patients, and incredibly annoying and difficult for a researcher to analyze the gathered data. Importantly, the existing commercial products are designed to capture the activities of healthy and active people, which contrasts with what she is trying to caputre: shuffling, limping, slower walking, etc.\\
+Their current system works on a time-based prompt-system, asking questions at regular intervals throughout the day. This is not as useful, as they are rather interested in the experiences of their patients when certain events or triggers happen. In addition, all of her data collection methods are heavily segregated and inefficient. In order to report their symptoms, a patient must input their answers into a smart watch, a mobile app, a website, etc. According to Dr. Macedo, this is not quite user-friendly especially when it comes to a group of older adult patients, and incredibly annoying and difficult for a researcher to analyze the gathered data. Importantly, the existing commercial products are designed to capture the activities of healthy and active people, which contrasts with what she is trying to caputre: shuffling, limping, slower walking, etc.\\
 
-This solution device would have to capture the subtle and slow movement of elderly patience with lumbar spinal stenosis (LSS) and prompt them with pre-determined questions when they stop or make certain type of  movements. It will then have to collect and send those data back to Dr. Macedo for her analysis.
+This solution device would have to capture the subtle and slow movement of older adult patients with lumbar spinal stenosis (LSS) and prompt them with pre-determined questions when they stop or make certain type of  movements. It will then have to collect and send those data back to Dr. Macedo for her analysis.
 
 \subsection{Inputs and Outputs}
 
@@ -49,15 +49,15 @@ This solution device would have to capture the subtle and slow movement of elder
 \begin{itemize}
     \item Sensor data will be used as a trigger to start the EMA
     \item User responses to the survey for data collection
-    \item Geolocation data of the user
 \end{itemize}
 \pagebreak
 \textbf{[Outputs]}
 \linebreak
 The output will be something that's useful for research and conclusion. This includes:
 \begin{itemize}
-    \item Graphically represented data that can be easily interpreted.
+    \item Graphically represented data.
     \item Specific numerical data of interest.
+    \item Activity tracker for the user.
 \end{itemize}
 
 \subsection{Stakeholders}
@@ -68,50 +68,48 @@ The output will be something that's useful for research and conclusion. This inc
 \wss{Hardware and software}
 
 \subsection{Constraints}
-Constraints include:
+Constraints include. All the numbers included are average and are subject to change:
 \begin{itemize}
-    \item Safety
-    \item Fail-safe
-    \item Offline useability
-    \item Portability
-    \item Strict data privacy (security)
-    \item Accurate timing; system is very sensitive to timing inaccuracies
+    \item Safety: The device will be safe to use, limit any danger to the user.
+    \item Weight: 60 grams. The device will be lightweight, so that it's portable and doesn't impact user's daily activities.
+    \item Dimensions: 40mm long, and 34mm wide with a depth of 10.4 mm. A device of specified dimensions are very ergonomic and comfortable to wear.
+    \item Accurate timing: System is very sensitive to timing inaccuracies, no \linebreak expected delays between detection and reporting.
+    \item Battery Life: The device should be operable for a minimum of 7 days without having to charge or replace the battery, as this is the standard length for one EMA evaluation session.
 \end{itemize}
 \pagebreak
 \section{Base Goals}
 \begin{center}
-\begin{tabular}{ | m{7em} | m{32em}| } 
-    \hline
-    \textbf{Goal} & \textbf{Explanation and Reasoning} \\
-    \hline
-    Tacking Minor Movements & Most activity trackers make it difficult to track minor movements.
-    They are generally created for highly mobile individuals such as athletes or similar. Since the target audience for this device will be older adults who have back and spinal problems; their movements will not be as pronounced as an athletes, for example. For this reason the tracker should have a good amount of sensitivity, so that minor movements are appropriately accounted for.  \\ 
-    \hline
-    Event Based Prompting & The tracker should be able to prompt individuals when it detects that a particular event has occurred, such as no movement after a period of movement.  Once prompted the individual will be asked to complete a Ecological Momentary Assessment (EMA) survey, in which they will be asked questions such as why they stopped moving, and if they are feeling any pain. Having a high visibily prompting system that includes audio and visual queues would be helpful in notifying participants that they should complete the EMA. This data will then be stored and used for further analysis. \\ 
-    \hline
-    Battery Life & A minimum battery life of one day will allow for daytime tracking and nighttime charging. This is a relatively standard practice with most smartphones and activty trackers. If a user has experienced using one of these devices the expectation of nightly charging would be something they are already used to. By not requiring the user to charge the device during the day there is a reduced likelihood of data collection disruptions due to charging.  \\ 
-    \hline
-	Highly Simplistic User Interface/Hardware design & The user base for this product will be the older adult population, some of whom many not use smartphones or smart activity trackers. Therefore, it is essential that the design of the user interface and hardware be intuitive to a person without a lot of experience using smart technology. This also improves the likelihood that a user will fill out the survery successfully and quickly when prompted to do so. \\
-	\hline
-	Graphical Presentation of Data & The data will be processed into an easy to interepert graphical or image based format that can be used to interpert the collected data. This will be displayed to the user to provide feedback on the activities that have been tracked throughout the day. Feedback will allow the users to better understand their movements and keep them on track with their rehabilitation programs. \\
-	\hline
-\end{tabular}
+    \begin{tabular}{ | m{7em} | m{32em}| }
+        \hline
+        \textbf{Goal}                                    & \textbf{Explanation and Reasoning}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               \\
+        \hline
+        Tacking Minor Movements                          & Most activity trackers make it difficult to track minor movements.
+        They are generally created for highly mobile individuals such as athletes or similar. Since the target audience for this device will be older adults who have back and spinal problems; their movements will not be as pronounced as an athletes, for example. For this reason the tracker should have a good amount of sensitivity, so that minor movements are appropriately accounted for.                                                                                                                                                                                                                                                       \\
+        \hline
+        Activity Based Prompting                            & The tracker should be able to prompt individuals when the activity monitoring system detects that a particular event has occurred, such as no movement after a period of movement.  Once prompted the individual will be asked to complete a Ecological Momentary Assessment (EMA) survey, in which they will be asked questions such as why they stopped moving, and if they are feeling any pain. Having a high visibile prompting system that includes audio and visual queues would be helpful in notifying participants that they should complete the EMA. This data will then be stored and used for further analysis. \\
+        \hline
+        Battery Life                                     & A minimum battery life of one day will allow for daytime tracking and nighttime charging. This is a relatively standard practice with most smartphones and activty trackers. If a user has experienced using one of these devices the expectation of nightly charging would be something they are already used to. By not requiring the user to charge the device during the day there is a reduced likelihood of data collection disruptions due to charging.                                                                                                                                   \\
+        \hline
+        Highly Simplistic User Interface/Hardware design & The user base for this product will be the older adult population, some of whom many not use smartphones or smart activity trackers. Therefore, it is essential that the design of the user interface and hardware be intuitive to a person without a lot of experience using smart technology. This also improves the likelihood that a user will fill out the survery successfully and quickly when prompted to do so.                                                                                                                                                                         \\
+        \hline
+        Graphical Presentation of Data                   & The data will be processed into an easy to interepert graphical or image based format that can be used to interpert the collected data. This will be displayed to the user to provide feedback on the activities that have been tracked throughout the day. Feedback will allow the users to better understand their movements and keep them on track with their rehabilitation programs.                                                                                                                                                                                                        \\
+        \hline
+    \end{tabular}
 \end{center}
 \pagebreak
 \section{Stretch Goals}
 \begin{center}
-\begin{tabular}{ | m{7em} | m{32em}| } 
-    \hline
-    \textbf{Goal} & \textbf{Explanation and Reasoning} \\
-    \hline
-    Anomoly Detection & The device should detect when certain anamolies occur. Some examples include: an abrupt stop in movement and then a prolonged duration of no movement (indicated a potential accident), major spikes in movements (sudden increases in acceleration, speed or, orientation changes), or other abnormal events. Detecting anomolies could improve user safety and quality of data collection. \\ 
-    \hline
-    Geotagging Events and Movements & Geotracking users and movements could show if a majority of movement is happening close to home or away form home; for example. This data will enable better primary data collection and help understand how users movements change throughout the day in a location and time based manner. \\ 
-    \hline
-    Movement based-charging system & Having a system that charges using movement could be benifical to users and help extend usable time. This would mean less charging and greater convinence. As part of this goal, reducing power draw would be an important aspect to make the movement based charging worthwhile.  \\  
-    \hline
-	
-\end{tabular}
+    \begin{tabular}{ | m{7em} | m{32em}| }
+        \hline
+        \textbf{Goal}                   & \textbf{Explanation and Reasoning}                                                                                                                                                                                                                                                                                                                                                           \\
+        \hline
+        Anomoly Detection               & The device should detect when certain anamolies occur. Some examples include: an abrupt stop in movement and then a prolonged duration of no movement (indicated a potential accident), major spikes in movements (sudden increases in acceleration, speed or, orientation changes), or other abnormal events. Detecting anomolies could improve user safety and quality of data collection. \\
+        \hline
+        Geotagging Events and Movements & Geotracking users and movements could show if a majority of movement is happening close to home or away form home; for example. This data will enable better primary data collection and help understand how users movements change throughout the day in a location and time based manner.                                                                                                  \\
+        \hline
+        Movement based-charging system  & Having a system that charges using movement could be benifical to users and help extend usable time. This would mean less charging and greater convinence. As part of this goal, reducing power draw would be an important aspect to make the movement based charging worthwhile.                                                                                                            \\
+        \hline
+    \end{tabular}
 \end{center}
 
 
