--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -50,7 +50,7 @@ This solution device would have to capture the subtle and slow movement of older
 
 \textbf{[Inputs]}
 \begin{itemize}
-    \item Sensor data will be used as a trigger to start the EMA
+    \item Sensors will detect EMA relevant patient movement
     \item User responses to the survey for data collection
 \end{itemize}
 
@@ -77,7 +77,8 @@ Constraints include. All the numbers included are average and are subject to cha
     \item Weight: 60 grams. The device will be lightweight, so that it's portable and doesn't impact user's daily activities.
     \item Dimensions: 40mm long, and 34mm wide with a depth of 10.4 mm. A device of specified dimensions are very ergonomic and comfortable to wear.
     \item Accurate timing: System is very sensitive to timing inaccuracies, no \linebreak expected delays between detection and reporting.
-    \item Battery Life: The device should be operable for a minimum of 7 days without having to charge or replace the battery, as this is the standard length for one EMA evaluation session.
+    \item Battery Life: The device will be operable for a minimum of 7 days without having to charge or replace the battery, as this is the standard length for one EMA evaluation session.
+    \item 2 Week Data Retention: Storage for a minimum of two weeks of EMA data will be available within the device. This will provide the minimum amount of data storage necessary to enable EMA.
 \end{itemize}
 
 \pagebreak
@@ -97,7 +98,10 @@ Constraints include. All the numbers included are average and are subject to cha
         \hline
         Highly Simplistic User Interface/Hardware design & The user base for this product will be the older adult population, some of whom many not use smartphones or smart activity trackers. Therefore, it is essential that the design of the user interface and hardware be intuitive to a person without a lot of experience using smart technology. This also improves the likelihood that a user will fill out the survery successfully and quickly when prompted to do so.                                                                                                                                                                         \\
         \hline
-        Graphical Presentation of Data                   & The data will be processed into an easy to interepert graphical or image based format that can be used to interpert the collected data. This will be displayed to the user to provide feedback on the activities that have been tracked throughout the day. Feedback will allow the users to better understand their movements and keep them on track with their rehabilitation programs.                                                                                                                                                                                                        \\
+        Meaningful Presentation of Data                   & The data will be processed into an easy to interepert graphical or image based format that can be used to interpert the collected data. This will be displayed to the user to provide feedback on the activities that have been tracked throughout the day. Feedback will allow the users to better understand their movements and keep them on track with their rehabilitation programs. In addition, the option to export the raw data collected during the EMA period will be available, as well as the processed versions of the data.                                                                                                                                                                                      \\
+	\hline
+	Customizeable Event Types and Thresholds			& Researchers will be able to customize the types of events that the device will detect and the thresholds that will activate them according to the needs of each individual EMA session and patient. Setting up the types of events to detect and their thresholds will be done before each monitoring period. The system will be configured in a way that will allow for a broad range of possible events to track, and will have many options to change properties of events and the types and levels of triggers for said events.
+\\
         \hline
     \end{tabular}
 \end{center}
@@ -110,7 +114,7 @@ Constraints include. All the numbers included are average and are subject to cha
         \hline
         \textbf{Goal}                   & \textbf{Explanation and Reasoning}                                                                                                                                                                                                                                                                                                                                                           \\
         \hline
-        Anomoly Detection               & The device should detect when certain anamolies occur. Some examples include: an abrupt stop in movement and then a prolonged duration of no movement (indicated a potential accident), major spikes in movements (sudden increases in acceleration, speed or, orientation changes), or other abnormal events. Detecting anomolies could improve user safety and quality of data collection. \\
+        Anomaly Detection               & The device should detect when certain anamolies occur. Some examples include: an abrupt stop in movement and then a prolonged duration of no movement (indicated a potential accident), major spikes in movements (sudden increases in acceleration, speed or, orientation changes), or other abnormal events. Detecting anomolies could improve user safety and quality of data collection. \\
         \hline
         Geotagging Events and Movements & Geotracking users and movements could show if a majority of movement is happening close to home or away form home; for example. This data will enable better primary data collection and help understand how users movements change throughout the day in a location and time based manner.                                                                                                  \\
         \hline
