Initial changes to Section 1

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -173,13 +173,17 @@ description of the unit and the SI name.
     \si{\metre} & length & metre\\
     \si{\kilogram} & mass	& kilogram\\
     \si{\second} & time & second\\
-    \si{\celsius} & temperature & centigrade\\
+    v & velocity &  \si{\metre\per\second}\\
+    a & acceleration &  \si{\metre\per\square\second}\\
+    F & force & newton (N = \si{\kilogram\metre\per\square\second})\\
+    f & frequency & \si{\Hz}\\
     \si{\joule} & energy & joule\\
     \si{\watt} & power & watt (W = \si{\joule\per\second})\\
     \bottomrule
   \end{tabular}
   %	\caption{Provide a caption}
 %\end{table}
+
 
 \plt{Only include the units that your SRS actually uses.}
 
@@ -202,9 +206,7 @@ description of the unit and the SI name.
 \subsection{Table of Symbols}
 
 The table that follows summarizes the symbols used in this document along with
-their units.  The choice of symbols was made to be consistent with the heat
-transfer literature and with existing documentation for solar water heating
-systems.  The symbols are listed in alphabetical order.
+their units.  The choice of symbols was made to be consistent with kinematics and existing documentation of existing activity trackers. The symbols are listed in alphabetical order.
 
 \renewcommand{\arraystretch}{1.2}
 %\noindent \begin{tabularx}{1.0\textwidth}{l l X}
@@ -231,14 +233,13 @@ which heat is transferred in
   A & Assumption\\
   DD & Data Definition\\
   GD & General Definition\\
+  EMA & Ecological Momentary Assessment\\
   GS & Goal Statement\\
   IM & Instance Model\\
   LC & Likely Change\\
   PS & Physical System Description\\
   R & Requirement\\
   SRS & Software Requirements Specification\\
-  \progname{} & \plt{put an expanded version of your program name here (as appropriate)}\\
-  T & Theoretical Model\\
   \bottomrule
 \end{tabular}\\
 
