Fixed some grammatical errors.

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -437,7 +437,7 @@ This system in theory is very simple. An array of sensors grabs info regarding t
 \item \progname{} Responsibilities:
 \begin{itemize}
 \item Detect data type mismatch, such as a string of characters instead of a
-  floating point number
+  floating point number.
 \item 
 \end{itemize}
 \end{itemize}
