Ran tex to update common info and changed to helvetica

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -18,6 +18,8 @@
 \usepackage{afterpage}
 
 \usepackage[round]{natbib}
+\usepackage{helvet}
+\renewcommand{\familydefault}{\sfdefault}
 
 %\usepackage{refcheck}
 
